--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,36 +6,36 @@
     android:scrollbars="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/TextViewTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hallo"
-            android:textSize="10pt"></TextView>
+            android:textSize="8pt" />
 
         <EditText
             android:id="@+id/EditTextName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="Test"
-            android:inputType="textPersonName"></EditText>
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/EditTextEmail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="example@test.de"
-            android:inputType="textEmailAddress"></EditText>
+            android:inputType="textEmailAddress" />
 
         <Spinner
             android:id="@+id/SpinnerFeedbackType"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:entries="@array/feedbacktypelist"></Spinner>
+            android:entries="@array/feedbacktypelist" />
 
         <EditText
             android:id="@+id/EditTextFeedbackBody"
@@ -43,20 +43,19 @@
             android:layout_height="wrap_content"
             android:hint="Test"
             android:inputType="textMultiLine"
-            android:lines="5"></EditText>
+            android:lines="5" />
 
         <CheckBox
             android:id="@+id/CheckBoxResponse"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Man"></CheckBox>
+            android:text="Man" />
 
         <Button
             android:id="@+id/ButtonSendFeedback"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="sendFeedback"
-            android:text="Add"></Button>
+            android:text="Add" />
 
     </LinearLayout>
 </ScrollView>
