--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -8,54 +8,96 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/TextViewTitle"
+            android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hallo"
+            android:text="E-Mail"
             android:textSize="8pt" />
 
         <EditText
-            android:id="@+id/EditTextName"
+            android:id="@+id/evEmail"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="Test"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/EditTextEmail"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:hint="example@test.de"
+            android:hint="person@example.de"
             android:inputType="textEmailAddress" />
 
-        <Spinner
-            android:id="@+id/SpinnerFeedbackType"
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/tvFirstname"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/feedbacktypelist" />
+            android:text="Vorname"
+            android:textSize="8pt" />
 
         <EditText
-            android:id="@+id/EditTextFeedbackBody"
+            android:id="@+id/evFirstname"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="Test"
-            android:inputType="textMultiLine"
-            android:lines="5" />
+            android:inputType="textPersonName" />
 
-        <CheckBox
-            android:id="@+id/CheckBoxResponse"
+        <TextView
+            android:id="@+id/tvSecondname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nachname"
+            android:textSize="8pt" />
+
+        <EditText
+            android:id="@+id/evSecondname"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Man" />
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/tvStreet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Straße"
+            android:textSize="8pt" />
+
+        <EditText
+            android:id="@+id/evStreet"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+        <TextView
+            android:id="@+id/tvPostcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Postleitzahl"
+            android:textSize="8pt" />
+
+        <EditText
+            android:id="@+id/evPostcode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPostalAddress" />
+
+        <TextView
+            android:id="@+id/tvCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stadt"
+            android:textSize="8pt" />
+
+        <EditText
+            android:id="@+id/evCity"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
 
         <Button
-            android:id="@+id/ButtonSendFeedback"
+            android:id="@+id/btnSave"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Add" />
+            android:text="Speichern" />
 
     </LinearLayout>
 </ScrollView>
