Notification Mock finished

--- a/app/src/main/res/layout/notificationentry.xml
+++ b/app/src/main/res/layout/notificationentry.xml
@@ -10,32 +10,12 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         >
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/notification_main"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp"
-            android:layout_toLeftOf="@+id/notification_status_icon"
-            android:textSize="30sp"
-            />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/notification_dueDate"
-            android:layout_toLeftOf="@+id/notification_status_icon"
-            android:layout_below="@+id/notification_main"
-            />
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,6 +23,15 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="16dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/notification_main"
+            android:layout_toRightOf="@+id/notification_status_icon"
+            android:layout_alignParentTop="true"
+            android:textSize="30sp"
             />
     </RelativeLayout>
 
