--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,11 +8,10 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rv"
-        android:layout_margin="16px"
-        />
+ <fragment
+     android:name="team3.innonight.fhws.innonight.CategoryFragment"
+     android:layout_width="fill_parent"
+     android:layout_height="fill_parent"
+     android:id="@+id/category_fragment" />
 
 </android.support.constraint.ConstraintLayout>
