--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_events"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Termine" />
+            android:title="Aufträge" />
         <item
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_user_id"
